--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,99 @@
 :root {
-    --primary: ;
-    --secondary: ;
+    --primary: rgb(99, 32, 32);
+    --secondary: gray;
 }
 
 * {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(38, 73, 50);
-    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: black;
 }
 
 header {
-    background-color: rgb(99, 32, 32);
-    width: 100%;
-    height: 200px;
-    border-radius: 5px;
-    font-size: 50px;
+    background-color: var(--primary) ;
+    padding: 15px;
+    color: black;
 }
 
-nav ul {
+header h1 {
+    display: inline-block;
+    font-size: 45px;
+    padding-left: 10px;
+}
+
+header nav {
+    font-size: 16px;
+    padding-top: 18px;
+    float: right;
+}
+
+header nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+h2 {
+    float: left;
+    background-color: black;
+    color: white;
+    padding: 5px;
+    font-size: 35px;
+}
+
+p {
+    float: right;
+}
+main {
+    margin: 25px;
+}
+.content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 5px;
-    font-size: 20px;
+    width: 100%;
+    height: 900px;
+    background-color: var(--secondary);
 }
 
 .card {
-    width: 100%;
-    height: 300px;
-    background-color: aquamarine;
-    font-size: 20px;
+  margin: 20px;
+  width: 100%;
+  background-color: var(--primary);
+}
+
+.about {
+    padding-top: 0;
+}
+
+.work {
     display: flex;
     flex-wrap: wrap;
+}
+
+.contact {
+    width: 30%;
+}
+
+.project {
+    width: 50%;
+    height: 50%;
+}
+
+img {
+    width: 50%;
+    height: 50%;
+}
+
+h4 {
+    text-align: center;
 }
 
 footer {
     border-bottom: 0px;
     display: block;
     height: 50px;
+    background-color: var(--secondary);
 }
