--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,6 @@
 
 * {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 body {
@@ -20,7 +18,7 @@ header {
 }
 
 header h1 {
-    display: inline-block;
+    display: block;
     font-size: 45px;
     padding-left: 10px;
 }
@@ -33,7 +31,8 @@ header nav {
 
 header nav ul li {
     display: inline-block;
-    margin-right: 20px;
+    padding: 10px;
+    min-width: 250px;
 }
 
 h2 {
@@ -54,7 +53,6 @@ main {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 900px;
     background-color: var(--secondary);
 }
 
@@ -65,7 +63,7 @@ main {
 }
 
 .about {
-    padding-top: 0;
+    display: inline-block;
 }
 
 .work {
@@ -74,7 +72,7 @@ main {
 }
 
 .contact {
-    width: 30%;
+    width: 50%;
 }
 
 .project {
@@ -85,6 +83,13 @@ main {
 img {
     width: 50%;
     height: 50%;
+    border: 3px solid white;
+}
+
+.project:hover {
+    width: 125%;
+    height: 125%;
+    font-size: 125%;
 }
 
 h4 {
@@ -96,4 +101,14 @@ footer {
     display: block;
     height: 50px;
     background-color: var(--secondary);
+}
+
+#imgp {
+    size-adjust: 50%;
+}
+@media screen and (max-width: 800px) {
+    .project {
+        width: 100%;
+        height: 100%;
+    }
 }
