--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
 header {
     background-color: var(--primary) ;
     padding: 15px;
+    width: auto;
     color: black;
 }
 
@@ -35,6 +36,10 @@ header nav ul li {
     min-width: 250px;
 }
 
+a {
+    color: white;
+}
+
 h2 {
     float: left;
     background-color: black;
@@ -46,9 +51,11 @@ h2 {
 p {
     float: right;
 }
+
 main {
     margin: 25px;
 }
+
 .content {
     display: flex;
     flex-wrap: wrap;
@@ -57,13 +64,13 @@ main {
 }
 
 .card {
-  margin: 20px;
-  width: 100%;
-  background-color: var(--primary);
+    margin: 20px;
+    width: 100%;
+    background-color: var(--primary);
 }
 
 .about {
-    display: inline-block;
+    display: inline-flex;
 }
 
 .work {
@@ -71,25 +78,27 @@ main {
     flex-wrap: wrap;
 }
 
-.contact {
-    width: 50%;
+.contact ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 10px;
+    padding: 5px;
 }
-
 .project {
     width: 50%;
     height: 50%;
+}
+
+figure{
+    min-width: 300px;
+    margin: 20px;
 }
 
 img {
     width: 50%;
     height: 50%;
     border: 3px solid white;
-}
-
-.project:hover {
-    width: 125%;
-    height: 125%;
-    font-size: 125%;
 }
 
 h4 {
@@ -103,12 +112,23 @@ footer {
     background-color: var(--secondary);
 }
 
-#imgp {
-    size-adjust: 50%;
+#img1 {
+    width: 100%;
+    height: 100%;
 }
+
+#me {
+    margin: 40px 20px 40px 20px;
+    text-align: center;
+}
+
 @media screen and (max-width: 800px) {
     .project {
         width: 100%;
         height: 100%;
+        min-width: 300px;
+    }
+    header nav ul li {
+        display: block;
     }
 }
